src/test/ui/suggestions/suggest-move-lifetimes.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/suggest-move-lifetimes.rs:1:13
   |
LL | struct A<T, 'a> {
   |         ----^^- help: reorder the parameters: `<'a, T>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: lifetime parameters must be declared prior to type parameters
  --> $DIR/suggest-move-lifetimes.rs:5:13
   |
LL | struct B<T, 'a, U> {
   |         ----^^---- help: reorder the parameters: `<'a, T, U>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: lifetime parameters must be declared prior to type parameters
  --> $DIR/suggest-move-lifetimes.rs:10:16
   |
LL | struct C<T, U, 'a> {
   |         -------^^- help: reorder the parameters: `<'a, T, U>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: lifetime parameters must be declared prior to type parameters
  --> $DIR/suggest-move-lifetimes.rs:15:16
   |
LL | struct D<T, U, 'a, 'b, V, 'c> {
   |         -------^^--^^-----^^- help: reorder the parameters: `<'a, 'b, 'c, T, U, V>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: aborting due to 4 previous errors

